BE-4, added places
