# app/Http/Requests/Travel/TravelUpdateRequest.php
@@ -5,6 +5,7 @@ namespace App\Http\Requests\Travel;
 use App\Models\Travel;
 use Illuminate\Foundation\Http\FormRequest;
 
+
 class TravelUpdateRequest extends FormRequest
 {
     public function authorize(): bool
@@ -27,7 +28,13 @@ class TravelUpdateRequest extends FormRequest
             'to' => ['required', 'date', 'after:from'],
             'longitude' => ['required', 'numeric'],
             'latitude' => ['required', 'numeric'],
-            'favourite' => ['sometimes', 'boolean'],
+            'places' => ['sometimes'],
+            'places.*.id' => ['nullable', 'integer'],
+            'places.*.name' => ['required', 'string', 'max:127'],
+            'places.*.description' => ['nullable', 'string', 'max:255'],
+            'places.*.category_id' => ['required', 'exists:travel_categories,id'],
+            'places.*.longitude' => ['required', 'numeric'],
+            'places.*.latitude' => ['required', 'numeric'],
         ];
     }
 }
