# app/Http/Resources/PlaceShowResource.php
@@ -6,7 +6,7 @@ use Carbon\Carbon;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class TravelResource extends JsonResource
+class PlaceShowResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -19,12 +19,9 @@ class TravelResource extends JsonResource
             'id' => $this->id,
             'name' => $this->name,
             'description' => $this->description,
-            'from' => $this->from->format('Y-m-d'),
-            'to' => $this->to->format('Y-m-d'),
+            'category' => $this->category->name,
             'longitude' => $this->longitude,
             'latitude' => $this->latitude,
-            'favourite' => $this->favourite,
-            'created' => Carbon::parse($this->resource->created_at)->diffForHumans(),
         ];
     }
 }
