# app/Http/Resources/TravelShowResource.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Carbon\Carbon;
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class TravelShowResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'description' => $this->description,
+            'from' => $this->from->format('Y-m-d'),
+            'to' => $this->to->format('Y-m-d'),
+            'longitude' => $this->longitude,
+            'latitude' => $this->latitude,
+            'favourite' => $this->favourite,
+            'created' => Carbon::parse($this->resource->created_at)->diffForHumans(),
+            'places' => PlaceShowResource::collection($this->places),
+        ];
+    }
+}
